# base-rf

./: .env.example  .gitignore  README.md  base.resource  pyproject.toml
.github/workflows/: browserstack_test.yml
log/: key-metrics.json  report.html
resource/locators/: homeLocator.yml  interestLocators.yml  lookingForPage.yml  resultSearchLocators.yml  searchLocators.yml  signInLocator.yml  welcomeLocators.yml
resource/pages/: homePage.resource  interestPage.resource  lookingForPage.resource  resultSearchPage.resource  searchPage.resource  signInPage.resource  welcomePage.resource
resource/utils/: customKeywords.resource  openApp.resource
test/: TED.robot  __init__.robot  acessar-app.robot  acessar-surpreenda-me.robot  pesquisar-video.robot
